# docker-standalone

./: .cursorignore  docker-compose-nodejs.yml  teste.html
.cursor/rules/: project.code-workspace  project.mdc
chatbot/: .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  handle_conversations.py  main.py  pyproject.toml
chatbot/adapters/: feedback_adapter.py  lhc_adapter.py  telegram_adapter.py  whatsapp_adapter.py
chatbot/config/tribunals/: tjac.json  tjal.json  tjam.json  tjap.json  tjba.json  tjce.json  tjdft.json  tjes.json  tjgo.json  tjma.json  tjmg.json  tjms.json  tjmt.json  tjpa.json  tjpe.json  tjpi.json  tjpr.json  tjrj.json  tjrn.json  tjro.json  tjrr.json  tjrs.json  tjsc.json  tjse.json  tjsp.json  tjto.json
chatbot/documentações/: CHATTERBOT_TECHNICAL.md  DOCUMENTO DE OFICIALIZAÇÃO DA DEMANDA (DOD).md
chatbot/k8s/: README.md  chatbot-deployment.yaml  mongodb-deployment.yaml
chatbot/mock_page/: JUSBR - Justiça em um só lugar.html
chatbot/mock_page/JUSBR - Justiça em um só lugar_files/: custom.css  fonts.css  pjeOffice.js.download  styles.css  uikit.css
chatbot/services/: base_service.py  human_service.py  jitsi_service.py  lhc_service.py  process_service.py  service_manager.py
template_lhc_json/: lhc-bot-1.json  rest-api-2.json
